--- a/main.html
+++ b/main.html
@@ -10,6 +10,34 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<h1 style="text-align:center">My Playlist</h1>
+	<div class="player_1" >
+		<a href="https://www.youtube.com/watch?v=kd-6aw99DpA " background-color:white target="_blank" style="text-decoration:none; color:black; background-color:white;">song1</a>
+		<br>
+		
+		<a href="https://www.youtube.com/watch?v=9iIX4PBplAY" target="blank" style="text-decoration:none; color:black; background-color:white">song2</a>
+		<br>
+		
+		<a href="https://www.youtube.com/watch?v=IjBAgWKW12Y" target="blank" style="text-decoration:none; color:black; background-color:white">song3</a>
+		<br>
+		
+		<a href="https://www.youtube.com/watch?v=puKD3nkB1h4" target="blank" style="text-decoration:none; color:black; background-color:white">song4</a>
+		<br>
+		
+		<a href="https://www.youtube.com/watch?v=6MgsHSAcI9k" target="blank" style="text-decoration:none; color:black; background-color:white">song5</a>
+	</div>
+	<p style="text-align:center"><b>Now Playing...</b></p>
+	<div class="player_2">
+		<video controls src="https://www.w3schools.com/tags/movie.mp4"></video>
+
+		<p style="text-align:center; background-color:white"> MP3 songs </p>
+
+		<p style="background-color:white">man meri jaan</p>
+
+		<audio src="https://www.pagalworld.com.se/files/download/id/64630" style="background-color:white" controls></audio>
+
+		
+	</div>
 
 </body>
 
